# text-file-terminal

./: .gitignore  README.md  flake.nix  pyproject.toml
assets/: screenrec.webm
rc/: README.md  text-file-terminal.kak  text-terminal.kak
rc/languages/: clojure.kak  haskell.kak  ipython.kak
src/text_file_terminal/: main.py  text_file_terminal.py
