[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text_file_terminal"
version = "1.0.0"
description = "Terminal as text file"
authors = [{name = "losnappas", email = "hanu6@hotmail.com"}]
license = {file = "UNLICENSE"}
dependencies = [
]

[project.scripts]
text-file-terminal = "text_file_terminal.main:main"
